fix: Fix hover overlapping effect by the tooltip

--- a/public/style.css
+++ b/public/style.css
@@ -10,7 +10,10 @@ body {
     display: inline-block;
     padding: 0.3rem;
     border-radius: 3px;
-    transition: opacity 0.3s ease-in;
+}
+
+.dot:hover {
+    fill: red;
 }
 
 #chart-container {
@@ -18,5 +21,5 @@ body {
 }
 
 footer {
-    
+    font-size: 0.7rem;
 }
